fix cart bag on mobiles

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -77,7 +77,7 @@ html, body {
 }
 
 .container {
-    margin-top: 80px;
+    margin-top: 100px;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
